<resources translatable="false">
    <string name="my_app_name">Volcano Live</string>
    <string name="my_app_name_test">Volcano Live_test</string>
    <string name="Home">Home</string>
    <string name="Schedule">Schedule</string>
    <string name="Msg">Chats</string>
    <string name="Mine">Me</string>
    <string name="title">Title</string>
    <string name="login">Login</string>
    <string name="loginandre">Log in</string>
    <string name="login_waiting">Logging in…</string>
    <string name="find">Discover</string>
    <string name="str_choosecountry">Country/Region</string>
    <string name="other_login">Third-party Login</string>
    <string name="other">Others</string>
    <string name="login_or_enroll">Sign up/Log in</string>
    <string name="hint_email_account">Email Account</string>
    <string name="email">Email</string>
    <string name="hint_code">Code</string>
    <string name="get_code">Send</string>
    <string name="register_code_s">%d s</string>
    <string name="search">Search</string>
    <string name="exit_app">Press again to exit the app</string>
    <string name="phote_book">Photos</string>
    <string name="canmei">Shoot</string>
    <string name="txt_clear_msg">Are you sure you want to clear all unread messages?</string>
    <string name="txt_del_msg">Are you sure you want to delete this message?</string>
    <string name="txt_del_fri">Are you sure you want to delete this friend?</string>
    <string name="history_record">History</string>
    <string name="setting">Settings</string>
    <string name="language">Language Switch</string>
    <string name="contact_us">Contact Us</string>
    <string name="Terms_of_Use">Terms of Use</string>
    <string name="agreement">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_ok">Feedback Successful</string>
    <string name="login_out">Log Out</string>
    <string name="ensure">Confirm</string>
    <string name="txt_phone_lagoin">Phone</string>
    <string name="txt_email_login">Email</string>
    <string name="txt_inputphone">Phone number</string>
    <string name="txt_inputcode">Verification code</string>
    <string name="language_zh">Simplified Chinese</string>
    <string name="language_zh_tw">Traditional Chinese</string>
    <string name="language_en">English</string>
    <string name="copy_success">Copy Successful</string>
    <string name="str_stoptalk">You are currently muted</string>
    <string name="str_inputcontent">Input</string>
    <string name="copy">Copy</string>
    <string name="collect_success">Favorite Added</string>
    <string name="cancel_collect_success">Unfavorite</string>
    <string name="share_success">Share Successful</string>
    <string name="price_s">$%s</string>
    <string name="say_something">Say Something</string>
    <string name="txt_feedtype">Notifications</string>
    <string name="txt_feedresult">Feedback Result</string>
    <string name="txt_feddtime">Feedback Time</string>
    <string name="txt_yuanyin">Reason</string>
    <string name="txt_jiesuo">Commentary by host</string>
    <string name="txt_choosecountry">Please Select Area Code</string>
    <string name="cancel">Close</string>
    <string name="detail_cancel">Cancel</string>
    <string name="no_data_hint">No Data Available</string>
    <string name="no_data">No Data Available</string>
    <string name="facebook_app_id" translatable="false">735497501397514</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb735497501397514</string>
    <string name="facebook_client_token" translatable="false">5d4178e883269c3d3d646430390197ac</string>
    <string name="visitor">Guest</string>
    <string name="login_out_hint">Are you sure you want to log out?</string>
    <string name="waiting_last_ask">There are unanswered questions, please try again later!</string>
    <string name="change_nothing">No Changes</string>
    <string name="input_sth_first">Please Enter The Question You Want to Ask!</string>
    <string name="hint">Tips</string>
    <string name="delete_a_hint_content">Are you sure to cancel this account? It cannot be used after deregistration!</string>
    <string name="feedback_hint">Please Describe The Problems You Encounter</string>
    <string name="delete_successful">Cancellation Successful</string>
    <string name="submit">Submit</string>
    <string name="submit_success">Submission Successful</string>
    <string name="submit_hint">Please Enter Submission Content</string>
    <string name="not_interested">Not Interested</string>
    <string name="not_interested_hint">After confirming not interested, the list will no longer show this content</string>
    <string name="No_more_prompts">Do Not Remind Again</string>
    <string name="Unlock_questions">Unlock Questions</string>
    <string name="setting_google">Google</string>
    <string name="setting_facebook">Facebook</string>
    <string name="setting_binding">Go to Bind</string>
    <string name="binding_success">Binding Successful</string>
    <string name="binding_error">Binding Failed</string>
    <string name="already_binding">Bound</string>
    <string name="phone">Phone</string>
    <string name="changPsw">Change Password</string>
    <string name="rechang">Reset</string>
    <string name="please_input_phone_num">Please Enter Mobile Number</string>
    <string name="please_input_email">Email</string>
    <string name="please_inputcureet_email">Incorrect Email Format</string>
    <string name="please_input_email_1">Enter Email</string>
    <string name="please_input_phone_code">Please Enter Verification Code</string>
    <string name="next">Next</string>
    <string name="finish">Complete</string>
    <string name="finis">End</string>
    <string name="and">And</string>
    <string name="login_expired">Login Expired</string>
    <string name="main_txt_recommended">Picks</string>
    <string name="main_txt_soccer">Soccer</string>
    <string name="main_txt_basketball">Basketball</string>
    <string name="main_txt_news">News</string>
    <string name="main_txt_session">%sField</string>
    <string name="main_txt_on_the_air">Live Now</string>
    <string name="main_txt_no_live">No Anchor is Broadcasting Yet</string>
    <string name="main_txt_basketball_phase">Q%s</string>
    <string name="zb_notice">Announce</string>
    <string name="anchor">host</string>
    <string name="str_year">Year</string>
    <string name="str_mouth">Month</string>
    <string name="str_day">Day</string>
    <string name="str_resend">Resend Message</string>
    <string name="str_choosetime">Select Date</string>
    <string name="main_txt_under">In Progress %s</string>
    <string name="main_txt_wks">Upcoming</string>
    <string name="main_txt_over">End</string>
    <string name="main_txt_tc">Delay</string>
    <string name="main_txt_sbc">First Half %s</string>
    <string name="main_txt_xbc">Second Half %s</string>
    <string name="main_txt_zd">Suspend</string>
    <string name="main_txt_yz">Abandon</string>
    <string name="main_txt_qx">Cancel</string>
    <string name="main_txt_dd">TBA</string>
    <string name="main_txt_yq">Delay</string>
    <string name="main_dqdz">PK</string>
    <string name="fans">Fans</string>
    <string name="chat"> DM</string>
    <string name="follow">+Follow</string>
    <string name="search_hint_interested">Search for live sports/events</string>
    <string name="search_txt_hot_race">Hot Games</string>
    <string name="attack">Att</string>
    <string name="wx_attack">D-Att</string>
    <string name="kql">Poss%</string>
    <string name="sp">SOFF</string>
    <string name="sz">SOT</string>
    <string name="efq">2-point Shot</string>
    <string name="sfq">3-point Shot</string>
    <string name="fq">Free Throw</string>
    <string name="text_live">Txt Live</string>
    <string name="import_event">Highlt</string>
    <string name="events_txt_title">Events</string>
    <string name="events_txt_details">Activity Details</string>
    <string name="follow_txt_unfollowed">Not Followed</string>
    <string name="follow_txt_followed">Following</string>
    <string name="follow_txt_title">Following</string>
    <string name="follow_txt_fans_num">Followers：%s</string>
    <string name="live_txt_0ff_air">Not Broadcasting Yet</string>
    <string name="viewing_txt_title">History</string>
    <string name="substitute">Team Market Value</string>
    <string name="ti">Substitute Lineup</string>
    <string name="first_z">Starting Lineup</string>
    <string name="txt_feedtype1">Update Issues</string>
    <string name="txt_feedtype2">Live Related</string>
    <string name="txt_feedtype3">User Experience</string>
    <string name="txt_feedtype4">Chat Issues</string>
    <string name="txt_feedtype5">Competitions</string>
    <string name="txt_feedtype6">Other</string>
    <string name="signal_source">Source</string>
    <string name="hafl_rices">HT</string>
    <string name="win_loss">WDL</string>
    <string name="win_los">Win Lose</string>
    <string name="handicap">HDP</string>
    <string name="goal_num">GOALS</string>
    <string name="total_goal">Total Score</string>
    <string name="company">CO</string>
    <string name="chu">O-OP</string>
    <string name="ji">C-OP</string>
    <string name="zs">HW</string>
    <string name="ping">DRAW</string>
    <string name="ks">AW</string>
    <string name="pf">OR</string>
    <string name="all">All</string>
    <string name="all_read">All Read</string>
    <string name="foot_scr">Football score</string>
    <string name="bas_scr">Basketball score</string>
    <string-array name="str_schedule_tab_top">
        <item>Picks</item>
        <item>Soccer</item>
        <item>Basketball</item>
        <item>Results</item>
    </string-array>
    <string-array name="str_msg_top">
        <item>Messages</item>
        <item>Contacts</item>
    </string-array>
    <string-array name="str_sch_top2_tab">
        <item>All</item>
        <item>European Cup</item>
        <item>Chinese Super League</item>
        <item>J-League</item>
        <item>NBA</item>
        <item>World Cup</item>
    </string-array>
    <string-array name="str_football_detail_tab">
        <item>Chat</item>
        <item>Host</item>
        <item>Status</item>
        <item>Teams</item>
        <item>Index</item>
        <item>Live</item>
    </string-array>
    <string-array name="str_football_detail_pure">
        <item>Chat</item>
        <item>Status</item>
        <item>Teams</item>
        <item>Index</item>
        <item>Live</item>
    </string-array>
    <string name="ws_error">ws message exception</string>
    <string name="player">Player</string>
    <string name="time">Min</string>
    <string name="score">Pts</string>
    <string name="floor">Reb</string>
    <string name="assist">Ast</string>
    <string name="shoot">FG</string>
    <string name="head_pulling">Pull down to load more records</string>
    <string name="head_refreshing">Loading more…</string>
    <string name="head_loading">Loading…</string>
    <string name="head_release">Release to load immediately</string>
    <string name="head_finish">Load completed</string>
    <string name="head_failed">Load failed</string>
    <string name="head_update">Last load M-d HH:mm</string>
    <string name="competition_txt_penalty">PK</string>
    <string name="goal_txt">GOAL</string>
    <string name="shoot_txt_just">SOT</string>
    <string name="shoot_txt_partial">SOFF</string>
    <string name="shoot_txt_not">PK Miss</string>
    <string name="own_goal">OG</string>
    <string name="competition_txt_red">RC</string>
    <string name="competition_txt_corner">CK</string>
    <string name="competition_txt_yellow">YC</string>
    <string name="competition_txt_substitution">Sub</string>
    <string name="competition_txt_multiple">2YC+RC</string>
</resources>