<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="v"
            type="com.xcjh.app.ui.details.fragment.DetailChatFragment" />

        <variable
            name="m"
            type="com.xcjh.app.ui.details.common.RoomChatVm" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">


             </LinearLayout>
         </androidx.core.widget.NestedScrollView>-->

        <include
            android:id="@+id/notice"
            android:visibility="gone"
            layout="@layout/item_detail_chat_notice" />
        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/smartChat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/llInput"
            android:layout_below="@id/notice">
            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlTextPulling="@string/head_pulling"
                app:srlTextLoading="@string/head_loading"
                app:srlTextRelease="@string/head_release"
                app:srlTextFinish="@string/head_finish"
                app:srlTextFailed="@string/head_failed"
                app:srlTextUpdate="@string/head_update"
                app:srlTextRefreshing="@string/head_refreshing"
                />
          <!--  <com.scwang.smart.refresh.header.MaterialHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvChat"
                click="@{v}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="3"
                tools:listitem="@layout/item_detail_chat" />

        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

        <RelativeLayout
            android:id="@+id/llInput"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/shape_chat_input">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_12"
                android:background="@drawable/icon_emoji"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_chat_msg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_76"
                android:background="@null"
                android:hint="@string/say_something"
                android:text="@={m.input}"
                android:maxLength="60"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/sp_14" />

            <ImageButton
                android:id="@+id/sendChat"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/dp_12"
                android:background="@drawable/icon_send"
                android:enabled="@{m.sendEnable}"
                app:click="@{v}" />
        </RelativeLayout>
    </RelativeLayout>
</layout>