<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:background="@color/c_201D35"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <View
            android:background="#14FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="3"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_4"
                android:gravity="center_vertical"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPlayerNum"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:background="@drawable/red_circle"
                    android:backgroundTint="#FE4848"
                    tools:text="22"
                    android:textSize="@dimen/sp_10"
                    android:textColor="@color/white"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tvPlayerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    tools:text="@string/player"
                    android:singleLine="true"
                    android:textColor="@color/c_F5F5F5"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="@string/time"
                android:textColor="@color/c_F5F5F5"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="@string/score"
                android:textColor="@color/c_F5F5F5"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tvFloor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="@string/floor"
                android:textColor="@color/c_F5F5F5"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tvAssist"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="@string/assist"
                android:textColor="@color/c_F5F5F5"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tvShot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                tools:text="@string/shoot"
                android:textColor="@color/c_F5F5F5"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>
    </LinearLayout>

</layout>