<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvFootball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/shape_r10"
            android:backgroundTint="@color/c_1f1f20"
            android:minHeight="100dp"
            android:overScrollMode="never"
            android:paddingVertical="@dimen/dp_15" />

        <LinearLayout
            android:id="@+id/footballBottom"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_12"
            android:background="@drawable/shape_r10"
            android:backgroundTint="@color/c_1f1f20"
            android:orientation="vertical"
            android:padding="@dimen/dp_15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_15">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_jingqiu_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/goal_txt" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_shezheng_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/shoot_txt_just" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_shepian_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/shoot_txt_partial" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_dianqiu_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/competition_txt_penalty" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_15">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_dianqiuweijing_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/shoot_txt_not" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_wulongqiu_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/own_goal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_zhugong_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/assist" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/red_card" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/competition_txt_red" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_15">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_jiaoqiu" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/competition_txt_corner" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/yellow_card" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/competition_txt_yellow" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_huanren_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/competition_txt_substitution" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_var_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="VAR" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/matchResultImg"
                        android:src="@drawable/sk_lianghuangyihong_icon" />

                    <TextView
                        style="@style/matchResultText"
                        android:text="@string/competition_txt_multiple" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</layout>